# plasma-applet-thermal-monitor

./: CMakeLists.txt  README.md
arch-linux/: PKGBUILD  plasma5-applets-thermal-monitor-git-r7.8b8a2ac-1-any.pkg.tar.xz
arch-linux/pkg/plasma5-applets-thermal-monitor-git/: .MTREE  .PKGINFO
arch-linux/pkg/plasma5-applets-thermal-monitor-git/usr/share/plasma/plasmoids/org.kde.thermalMonitor/: metadata.desktop
arch-linux/plasma-applet-thermal-monitor/: config  packed-refs
package/: metadata.desktop  thermalMonitor-1.0.2.plasmoid
package/contents/code/: model-utils.js  temperature-utils.js
package/contents/config/: config.qml  main.xml
package/contents/ui/: TemperatureItem.qml  main.qml
package/contents/ui/config/: ConfigAppearance.qml  ConfigGeneral.qml  ConfigMisc.qml  ConfigTemperatures.qml
translations/: CMakeLists.txt  Messages.sh  TRANSLATORS_README  update-translations.sh
translations/po/: plasma_applet_org.kde.thermalMonitor.pot  plasma_applet_org.kde.thermalMonitor_cs.po  plasma_applet_org.kde.thermalMonitor_de.po  plasma_applet_org.kde.thermalMonitor_el.po  plasma_applet_org.kde.thermalMonitor_en.po  plasma_applet_org.kde.thermalMonitor_es.po  plasma_applet_org.kde.thermalMonitor_fr.po  plasma_applet_org.kde.thermalMonitor_hr.po  plasma_applet_org.kde.thermalMonitor_pl.po  plasma_applet_org.kde.thermalMonitor_ru.po  plasma_applet_org.kde.thermalMonitor_sr.po  plasma_applet_org.kde.thermalMonitor_sr@ijekavian.po  plasma_applet_org.kde.thermalMonitor_sr@ijekavianlatin.po  plasma_applet_org.kde.thermalMonitor_sr@latin.po
(+3 files in other folders)
